@@ -1,3 +1,10 @@
+2007-07-26  Diego Escalante Urrelo  <diegoe@gnome.org>
+
+	* src/ephy-window.c:
+
+	Make "Customise toolbars" insensitive when toolbars are hidden. Patch
+	by René Stadler. Fixes bug #164227.
+
 2007-07-26  Reinout van Schouwen <reinouts@gnome.org>
 	
 	* embed/mozilla/EphyAboutModule.cpp:
